--- a/bytebank_1_5/bytebank-api-runnable/database/main/db.properties
+++ b/bytebank_1_5/bytebank-api-runnable/database/main/db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Wed Dec 22 21:43:49 BRT 2021
+#Thu Dec 23 18:41:26 BRT 2021
 version=2.4.1
-modified=no
+modified=yes
 tx_timestamp=0
