--- a/flutter-nuvigator/pubspec.yaml
+++ b/flutter-nuvigator/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
     git:
       url: https://github.com/bhavin-concetto/smoothratingbar.git
       ref: dev
+  nuvigator: ^1.0.0
 
 dev_dependencies:
   flutter_test:
